--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,9 @@
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleDebug",
+        "withoutCredentials": true
       }
     },
     "preview": {
