--- a/app.json
+++ b/app.json
@@ -8,13 +8,17 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "runtimeVersion": {
+        "policy": "appVersion"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
       },
-      "package": "com.senouci.FlixFlex"
+      "package": "com.senouci.FlixFlex",
+      "runtimeVersion": "1.0.0"
     },
     "web": {
       "bundler": "metro",
@@ -29,6 +33,16 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "enableProguardInReleaseBuilds": true,
+            "enableShrinkResourceslnReleaseBuilds": true,
+            "useLegacyPackaging": true
+          }
         }
       ]
     ],
@@ -47,6 +61,9 @@
       "FIREBASE_APP_ID": "1:909674545130:web:8f5f82f306c79b2688fc93",
       "TMDB_API_KEY": "0e44cb51eda50c91cc72cdb6ddb46d0a",
       "TMDB_BASE_URL": "https://api.themoviedb.org/3"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/d520e133-631a-4ca5-8f0f-0f7a5c2fb9bd"
     }
   }
 }
