--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -25,7 +25,9 @@
     "@tanstack/react-query": "^4.36.1",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
@@ -49,12 +51,13 @@
     "react-native-webview": "13.12.5",
     "react-native-youtube-iframe": "^2.3.0",
     "zod": "^3.24.3",
-    "expo-dev-client": "~5.0.20"
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
